(fix) 일부 문서 수정

--- a/_posts/2018-06-08-syllabus.md
+++ b/_posts/2018-06-08-syllabus.md
@@ -35,16 +35,17 @@ share: true
 - 발표자가 발표 후 github.io + markdown으로 블로깅을 한다. 
     - 간단하게 abstract정도로만하고 glide or markdown 슬라이드를 링킹
 - 참가자는 자신의 코드를 [mot repo](https://github.com/motlabs/mot-tf-codepattern-study)에 업로드 한다. 
+    - 사전에 github사용법을 배워야 한다 ([도움 문서 win10](https://docs.google.com/document/d/1XzgCJJN_eikR20fspkZ7EA_j2T8P3ZKP4dBKH4MOPg8/edit#heading=h.76zuyiquoxb3))
 
 #### 블로깅 형식
 - An example
 
 ```
-- 제목,
-- 날짜 + 발표자,
-- 발표 gslide link + github link
-- 스터디 목차,
-- 간단 요약 (영문 + 국문), discussion note,
+- About
+- 슬라이드+ 깃헙 레포 링크
+- Abstract (Kor)
+- Abstract (Eng)
+- Discussions
 ```
 
 - markdown 문법 참고 자료
