(fix) week1 study preparation reflection

--- a/_posts/2018-06-08-syllabus.md
+++ b/_posts/2018-06-08-syllabus.md
@@ -10,14 +10,13 @@ share: true
 ---
 
 
-## 스터디 목적 / 철학
-  - 텐서플로우의 기본 구조를 빠르게 익힌다.
-  - 텐서 플로우 모델 코드 패턴을 익힌다.
-  - 최신 버전의 tensorflow  API을 이해한다.
-  - 코드와 문서를 남겨서 커뮤니티에 공유한다.
-  - 모든 코드와 문서를 모든 팀원이 철저하게 리뷰한다.
-  - 먼저 전체 코드를 naive하게 구현하고 하나씩 모듈화 해서 replace해서 나간다.
-  - 목적이 명확하고 MoT스터디와 병행하면서 빠지지 않을 분과 함께 함
+## 스터디 목적 
+- 빠르게 아이디어를 검증할 수 있는 코드 패턴 찾기
+- 디버깅을 간편하게 해주는 코드 패턴 찾기 
+- 코드 재사용 성능 높여주는 코드 패턴 찾기 
+- 훈련시간을 최소화 시킬 수 있는 파이프라인 찾기
+- 간결한 코드를 만들기 위한 패턴 찾기 
+
 
 ## MoT 스터디 철학
 - 발표하는 순간은 내가 최고 전문가가 된다.
@@ -32,13 +31,15 @@ share: true
 ## 방식
 - 팀원코드리뷰 : 이전 과제의 코드를 돌아가면서 리뷰한다.
 - 본 발표 : 발표자가 책 해당 챕터 내용을 요약하고 api gslide 준비 하기 (api 문서 자료 찾아서)
+    - [슬라이즈 양식 링크](https://docs.google.com/presentation/d/1HDrlWsek8O5MnummGzvHYR6taEhao4JmrL6ejOf9MgA/edit#slide=id.p3)
 - 발표자가 발표 후 github.io + markdown으로 블로깅을 한다. 
     - 간단하게 abstract정도로만하고 glide or markdown 슬라이드를 링킹
 - 참가자는 자신의 코드를 [mot repo](https://github.com/motlabs/mot-tf-codepattern-study)에 업로드 한다. 
     - 사전에 github사용법을 배워야 한다 ([도움 문서 win10](https://docs.google.com/document/d/1XzgCJJN_eikR20fspkZ7EA_j2T8P3ZKP4dBKH4MOPg8/edit#heading=h.76zuyiquoxb3))
+- [Google python code convention](https://google.github.io/styleguide/pyguide.html) 숙지
 
 #### 블로깅 형식
-- An example
+- [post template](https://motlabs.github.io/2018-06-08/postformat/)
 
 ```
 - About
