(feat) week2 summary addition

--- a/_posts/2018-06-08-syllabus.md
+++ b/_posts/2018-06-08-syllabus.md
@@ -38,6 +38,22 @@ share: true
     - 사전에 github사용법을 배워야 한다 ([도움 문서 win10](https://docs.google.com/document/d/1XzgCJJN_eikR20fspkZ7EA_j2T8P3ZKP4dBKH4MOPg8/edit#heading=h.76zuyiquoxb3))
 - [Google python code convention](https://google.github.io/styleguide/pyguide.html) 숙지
 
+- 스터디 이후 할일
+```python
+발표자:
+- 자료 업데이트하고 
+- 블로깅 (https://motlabs.github.io/ )
+
+다른 팀원
+- 배운것을 토대로 본인의 코드 업데이트
+- $ git fork https://github.com/jwkanggist/tensorflowlite 
+
+다음 발표자
+- 차주 발표 준비
+
+```
+
+
 #### 블로깅 형식
 - [post template](https://motlabs.github.io/2018-06-08/postformat/)
 
