(feat) post thumbnail 추가를 위한 노력

--- a/_posts/2018-06-08-syllabus.md
+++ b/_posts/2018-06-08-syllabus.md
@@ -6,6 +6,8 @@ author: jwkang
 date: 2018-06-08
 tags: [TF Pattern study]
 comments: true
+subdir: syllabus
+thumbnail: tensorflow_logo.png
 share: true
 ---
 
